Add circle to icons font and small fixes

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <title>Nekuno</title>
 </head>
 <body class="theme-nekuno">
-
+    <div class="statusbar-overlay"></div>
     <!-- Scrollable page content -->
     <div id="root"></div>
 
