--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+    <!--WebView method setUserAgentString(true) must be called so that viewport is used-->
     <link href='https://fonts.googleapis.com/css?family=Maven+Pro:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="bundle.css">
     <title>Nekuno</title>
@@ -17,19 +18,12 @@
 
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="vendor.js"></script>
+    <script type="text/javascript">
+        nekunoApp = new Framework7();
+        //$$ = Dom7;
+
+    </script>
     <script type="text/javascript" src="bundle.js"></script>
 
-    <script type="text/javascript">
-        var myApp = new Framework7();
-        var $$ = Dom7;
-
-        $$('.open-left-panel').on('click', function (e) {
-            myApp.openPanel('left');
-        });
-
-        $$('.panel-close').on('click', function (e) {
-            myApp.closePanel();
-        });
-    </script>
 </body>
 </html>
