QS-896: Fix creating Framewok7 new instance

--- a/src/index.html
+++ b/src/index.html
@@ -18,12 +18,18 @@
 
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="vendor.js"></script>
-    <script type="text/javascript" src="bundle.js"></script>
-    <script type="text/javascript">
-        nekunoApp = new Framework7();
-        //$$ = Dom7;
 
+    <script type="text/javascript">
+        nekunoApp = new Framework7({
+            cache: false,
+            router: false,
+            swipeBackPage: false,
+            modalTitle: 'Nekuno'
+        });
+        //$$ = Dom7;
     </script>
+    <script type="text/javascript" src="bundle.js"></script>
+
 
 </body>
 </html>
