QS-905: Modal styles and answer modals functionality

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,9 @@
             cache: false,
             router: false,
             swipeBackPage: false,
-            modalTitle: 'Nekuno'
+            modalTitle: 'AVISO',
+            modalButtonOk: 'ACEPTAR',
+            modalButtonCancel: 'CANCELAR'
         });
         //$$ = Dom7;
     </script>
