QS-913: react-geosuggest

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
 
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="vendor.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
 
     <script type="text/javascript">
         nekunoApp = new Framework7({
