QS-945: Add Google login using hello library

--- a/src/oauthcallback.html
+++ b/src/oauthcallback.html
@@ -1,8 +1,13 @@
 <html>
 <body>
+<script src="./vendor.js"></script>
 <script>
-    window.opener.openFB.oauthCallback(window.location.href);
-    window.close();
+    if (window.location.href.indexOf('google') >= 0){
+
+    } else {
+        window.opener.openFB.oauthCallback(window.location.href);
+        window.close();
+    }
 </script>
 </body>
 </html>
