QS-987: Modal locale

--- a/src/index.html
+++ b/src/index.html
@@ -23,10 +23,7 @@
         nekunoApp = new Framework7({
             cache: false,
             router: false,
-            swipeBackPage: false,
-            modalTitle: 'AVISO',
-            modalButtonOk: 'ACEPTAR',
-            modalButtonCancel: 'CANCELAR'
+            swipeBackPage: false
         });
         //$$ = Dom7;
     </script>
