QS-1130: Use Nekuno color for theme-color meta

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#6342b1">
     <meta name="apple-mobile-web-app-title" content="Nekuno">
     <meta name="application-name" content="Nekuno">
-    <meta name="theme-color" content="#ffffff">
+    <meta name="theme-color" content="#151232">
     <link rel="stylesheet" type="text/css" href="bundle.css">
     <title>Nekuno</title>
 </head>
