--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,11 @@
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
     <!--WebView method setUserAgentString(true) must be called so that viewport is used-->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
-    <link rel="manifest" href="/manifest.json">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#6342b1">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="manifest.json">
+    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#6342b1">
     <meta name="apple-mobile-web-app-title" content="Nekuno">
     <meta name="application-name" content="Nekuno">
     <meta name="theme-color" content="#151232">
@@ -35,7 +35,7 @@
         });
         //$$ = Dom7;
     </script>
-    <script type="text/javascript" src="bundle.js"></script>
+    <script type="text/javascript" src="bundle.js?b=b"></script>
 
 
 </body>
