QS-1249: Revert last commit. Use panel closed event to push history state

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
             router: false,
             swipeBackPage: false
         });
-        //$$ = Dom7;
+        $$ = Dom7;
     </script>
     <script type="text/javascript" src="bundle.js?b=b"></script>
 
