--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,14 @@
 </head>
 <body class="theme-nekuno">
     <div class="statusbar-overlay"></div>
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = "//connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v2.8";
+        fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'))</script>
     <!-- Scrollable page content -->
     <div id="root"></div>
 
