--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,12 @@
     <meta name="msapplication-square150x150logo" content="img/ms-150x150.png">
     <link rel="stylesheet" type="text/css" href="bundle.css">
     <title>Nekuno</title>
+    <meta property="og:title" content="Nekuno" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="http://m.nekuno.com/img/android-chrome-192x192.png" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="192" />
+    <meta property="og:image:height" content="192" />
 </head>
 <body class="theme-nekuno">
     <div class="statusbar-overlay"></div>
